# Factory_RL_Gazebo

./: .gitignore  README.md  factory_prespawned.world  setup.py  setup.sh
RL_mlcs/: __init__.py
RL_mlcs.egg-info/: PKG-INFO  SOURCES.txt
RL_mlcs/envs/: __init__.py  gazebo_env.py
RL_mlcs/envs/turtlebot/: __init__.py  factory.py  test.py
RL_mlcs/envs/vehicle_v2/: __init__.py  ddpg.py  qlearn.py  srl.py
RL_mlcs/envs/youbot/: __init__.py  ddpg.py  qlearn.py  srl.py
RL_mlcs/scoreboard/: __init__.py
agent/: ddpg.py
agent/agent_modules/: __init__.py  additional_functions.py  build_actor_critic.py
agent/modules/: ou_noise.py  replay.py
example/: ddpg_config.py  env_reset.py  env_settings.py  envresettest.py  log.txt  main.py  main_ddpg.py  main_qlearn.py
launch/: test.launch  vehicle_v2.launch  youbot.launch
mlcs_sim/bringup/: CMakeLists.txt  package.xml
mlcs_sim/bringup/launch/: base_controller.launch  joint_state_controller.launch  robot.launch  twist_mux.launch  youbot-brsu-2.launch
mlcs_sim/bringup/rviz/: youbot.rviz
mlcs_sim/description/: CMakeLists.txt  package.xml
mlcs_sim/description/urdf/: base.urdf.xacro  hokuyo_urg04_laser.gazebo.xacro  hokuyo_urg04_laser.urdf.xacro  kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro  materials.urdf.xacro  rear_platform_v2.urdf.xacro  robot.urdf.xacro  sonar_sensor.gazebo.xacro  sonar_sensor.urdf.xacro
mlcs_sim/slam/: CMakeLists.txt  package.xml
mlcs_sim/slam/launch/: slam.launch
mlcs_sim/teleop/: CMakeLists.txt  package.xml
mlcs_sim/teleop/launch/: teleop_keyboard.launch
models/: walk.dae  walk1.dae  walk2.dae  walk3.dae
models/blue_floor/: model.sdf
models/brownbrick_wall/: model.sdf
models/concrete_wall/: model.sdf
models/darkgrey_floor/: model.sdf
models/darkred_floor/: model.sdf
models/env_floor/blue_floor/: model.config  model.sdf
models/env_floor/darkgrey_floor/: model.config  model.sdf
models/env_floor/darkred_floor/: model.config  model.sdf
models/env_floor/green_floor/: model.config  model.sdf
models/env_floor/lightgrey_floor/: model.config  model.sdf
models/env_floor/urethane_floor/: model.config  model.sdf
models/env_machine/Automatic_Rotary_Packing_Machine/: model.config  model.sdf
models/env_machine/Inspection_Metal_Detector/: model.config  model.sdf
models/env_machine/aircompressor/: model.config  model.sdf
models/env_machine/chemical_tank/: model.config  model.sdf
models/env_machine/cnc/: cnc.dae  model.config  model.sdf
models/env_machine/cnc_hard/: model.config  model.sdf
models/env_machine/drilling/: model.config  model.sdf
models/env_machine/extrusion/: model.config  model.sdf
models/env_machine/forklift/: model.config  model.sdf
models/env_machine/freezer/: model.config  model.sdf
models/env_machine/hopper/: model.config  model.sdf
models/env_machine/inject/: model.config  model.sdf
models/env_machine/lathe/: model.config  model.sdf
models/env_machine/milling/: model.config  model.sdf
models/env_machine/mixer_and_grinder/: model.config  model.sdf
models/env_machine/offset_press/: model.config  model.sdf
models/env_machine/plastifier/: model.config  model.sdf
models/env_machine/polishing/: model.config  model.sdf
models/env_machine/systec/: model.config  model.sdf
models/env_machine/tablesawcut/: model.config  model.sdf
models/env_machine/transformer/: model.config  model.sdf
models/env_machine/unravel/: model.config  model.sdf
models/env_machine/workbench/: model.config  model.sdf
models/env_tool/dumpster/: model.sdf
models/env_tool/jersey_barrier/: model.sdf
models/env_wall/brownbrick_wall/: model.config  model.sdf
models/env_wall/concrete_wall/: model.config  model.sdf
models/env_wall/grey_wall/: model.sdf
models/env_wall/oldbrick_wall/: model.sdf
models/env_wall/redbrick_wall/: model.sdf
models/green_floor/: model.sdf
models/grey_wall/: model.config  model.sdf
models/lathe/: model.config  model.sdf
models/lightgrey_floor/: model.sdf
models/oldbrick_wall/: model.config  model.sdf
models/redbrick_wall/: model.config  model.sdf
models/systec/: model.config  model.sdf
models/urethane_floor/: model.sdf
module/: ddpg.py  replay.py  srl.py
runfile/: ddpg_config.py  env_reset.py  env_settings.py  envresettest.py  log.txt  run_ddpg.py  run_srl.py  srl_config.py  view_reward.py
runfile/old/: env_reset.py  env_settings.py
world/: circuit.world  circuit2.world  maze.world  rand_env.world  round.world  simple.world  test.world
(+31 files in other folders)
