<?xml version="1.0"?>
<package>
  <name>description</name>
  <version>0.0.1</version>
  <description>Robot descriptions in form of URDF files and meshes</description>

  <license>GPLv3</license>

  <author email="seungchul0406@gmail.com">Seungchul Ha</author>

  <maintainer email="seungchul0406@gmail.com">Seungchul Ha</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
