<?xml version="1.0"?>
<package>
  <name>slam</name>
  <version>0.0.1</version>
  <description>map building with SLAM</description>

  <license>GPLv3</license>

  <author email="seungchul0406@gmail.com">Seungchul Ha</author>

  <maintainer email="seungchul0406@gmail.com">Seungchul Ha</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gmapping</run_depend>
  <run_depend>cob_scan_unifier</run_depend>

  <test_depend>roslaunch</test_depend>  

</package>
