<?xml version="1.0"?>
<package>
  <name>teleop</name>
  <version>0.0.1</version>
  <description>teleoperation via keyboard</description>

  <license>GPLv3</license>
  
  <author email="seungchul0406@gmail.com">Seungchul Ha</author>

  <maintainer email="seungchul0406@gmail.com">Seungchul Ha</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>geometry_msgs</run_depend>
  
  <test_depend>roslaunch</test_depend>
  
</package>
